--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,12 +30,6 @@ jobs:
       - name: Push image to DO Container Registry 
         run: docker push registry.digitalocean.com/dev-ops-novi-api/api:test
 
-      - name: run docker
-        run: docker run --name api -d api
-
-      - name: docker check env
-        run: docker exec api /usr/bin/env
-
       - name: create cluster
         run: doctl kubernetes cluster create api-cluster --tag api --auto-upgrade=true --node-pool "name=api-pool;count=1;auto-scale=true;min-nodes=1;max-nodes=3;tag=api"
       
@@ -49,6 +43,9 @@ jobs:
 
       - name: verify replica set
         run: kubectl get rs
+
+      - name: Get pods
+        run: kubectl get pods  
         
       - name: expose using loadbalancer
         run: kubectl expose deployment api --type=LoadBalancer --port=80 --target-port=80
