--- a/alembic.ini
+++ b/alembic.ini
@@ -33,7 +33,7 @@ prepend_sys_path = .
 # set to 'true' to allow .pyc and .pyo files without
 # a source .py file to be detected as revisions in the
 # versions/ directory
-# sourceless = false
+sourceless = false
 
 # version location specification; This defaults
 # to alembic/versions.  When using multiple version
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql://user-name:strong-password@localhost:5433/api
 
 
 [post_write_hooks]
