--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -29,6 +29,12 @@ spec:
             cpu: 100m
           limits:
             cpu: 100m
+        env:
+          - name: DATABASE_URL
+            valueFrom:
+              secretKeyRef:
+                name: database-secret
+                key: database-url
 ---
 apiVersion: v1
 kind: Service
@@ -43,5 +49,3 @@ spec:
       targetPort: 80
   selector:
     app: api
-
-# --build-arg DATABASE_URL_ARG=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)
